# OpenOOD

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  codespell_ignore.txt  codespell_ignored.txt  data  easy_dev.ipynb  environment.yml  example_imagenet_eval.ipynb  finetune.sh  id_generator.py  imglist_generator.py  imglist_maker.py  index.html  main.py  make_tiny_scripts.py  ood_generator.py  pipeline.sh  pyproject.toml  requirements.txt  setup.md  setup.py  test.ipynb  tiny_inat_all.sh  tutorial.py
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: adding-leaderboard-entry.md
.github/workflows/: main.yml
configs/datasets/: digits_benchmark.yml  mnist_datasets.yml  (+2 more)
css/: main.css
datasets/: __init__.py  base_dataset.py  imglist_dataset.py
evaluators/: arpl_evaluator.py  cutpaste_evaluator.py  draem_evaluator.py  dsvdd_evaluator.py  fsood_evaluator.py  openmax_evaluator.py
html_outputs/: cifar10.html  cifar100.html  imagenet.html  imagenet1k_fsood.html  imagenet1k_ood.html  imagenet200_fsood.html  imagenet200_ood.html
losses/: __init__.py  focal.py  kdad_losses.py  sce.py
networks/: bit.py  densenet.py  dsvdd_net.py  lenet.py  opengan.py  resnet50.py  wrn.py
pipelines/: ad_test_det.py  test_acc_pipeline.py  test_patchcore_pipeline.py  train_dsvdd_pipeline.py  train_pipeline.py  utils.py
postprocessors/: ebo_postprocessor.py  mds_postprocessor.py  odin_postprocessor.py  residual_postprocessor.py
preprocessors/: base_preprocessor.py  cutpaste_preprocessor.py  patch_preprocessor.py  utils.py
recorders/: __init__.py  base_recorder.py
results/: cifar10.csv  cifar100.csv  imagenet.csv  imagenet1k_fsood.csv  imagenet1k_ood.csv  imagenet200_fsood.csv  imagenet200_ood.csv
scripts/: attack_ood.py  attack_ood_imagenet.py  covid_baseline.sh  covid_test.sh  digits_baseline.sh  digits_featext.sh  digits_test_gmm.sh  digits_test_mds.sh  eval_ood.py  eval_ood_imagenet.py  eval_ood_imagenet_foundation_models.py  objects_baseline.sh  objects_test.sh
tests/: conftest.py  test_infrastructure_validation.py
tools/: modify_imagelist.py  modify_imagelist.sh  run.py  temp.py
trainers/: __init__.py  draem_trainer.py  dsvdd_trainer.py  lr_scheduler.py  mixup_trainer.py  oe_trainer.py  utils.py
utils/: convert.csv.to.json.py  convert.json.to.html.py  logger.py  papers.csv  pipeline.sh  table_template.html.j2
(+2111 files in other folders)
